March Localization II

--- a/learn-certs-pr/azure-ai-engineer.yml
+++ b/learn-certs-pr/azure-ai-engineer.yml
@@ -1,17 +1,19 @@
-### YamlMime:Certification
+﻿### YamlMime:Certification
 title: 'Microsoft Certified: Azure AI Engineer Associate'
 metadata:
   title: 'Microsoft Certified: Azure AI Engineer Associate'
-  description: Azure AI-Ingenieure nutzen kognitive Dienste, maschinelles Lernen und Wissensmanagement, um Microsoft AI-Lösungen zu entwickeln und zu implementieren, die natürliche Sprachverarbeitung, Sprache, Computer Vision, Roboter und Mitarbeiter umfassen.
+  description: 'Azure AI-Ingenieure nutzen kognitive Dienste, maschinelles Lernen und Wissensmanagement, um Microsoft AI-Lösungen zu entwickeln und zu implementieren, die natürliche Sprachverarbeitung, Sprache, Computer Vision, Roboter und Mitarbeiter umfassen.'
 uid: certification.azure-ai-engineer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: Azure AI-Ingenieure nutzen kognitive Dienste, maschinelles Lernen und Wissensmanagement, um Microsoft AI-Lösungen zu entwickeln und zu implementieren, die natürliche Sprachverarbeitung, Sprache, Computer Vision, Roboter und Mitarbeiter umfassen.
+summary: |-
+  Azure AI-Ingenieure nutzen kognitive Dienste, maschinelles Lernen und Wissensmanagement, um Microsoft AI-Lösungen zu entwickeln und zu implementieren, die natürliche Sprachverarbeitung, Sprache, Computer Vision, Roboter und Mitarbeiter umfassen.
 subTitle: Azure AI-Ingenieure nutzen kognitive Dienste, maschinelles Lernen und Wissensmanagement, um Microsoft AI-Lösungen zu entwickeln und zu implementieren, die natürliche Sprachverarbeitung, Sprache, Computer Vision, Roboter und Mitarbeiter umfassen.
 levels:
 - intermediate
 skills:
+- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - Lösungsanforderungen analysieren
-- Entwerfen von AI-Lösungen
+- Konzipieren von AI-Lösungen
 - Implementieren und Überwachen von AI-Lösungen
 roles:
 - ai-engineer
@@ -26,29 +28,25 @@ products:
 courses:
 - uid: course.ai-100t01
 paths:
-- uid: learn.data-ai.publish-experiment-with-ml-studio
-- uid: learn.data-ai.translate-speech-with-speech-services
-- uid: learn.data-ai.classify-images-with-vision-services
 - uid: learn.data-ai.evaluate-text-with-language-services
+- uid: learn.data-ai.translate-speech-with-speech-services
 - uid: learn.data-ai.create-bots-with-the-azure-bot-service
+- uid: learn.data-ai.classify-images-with-vision-services
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHf
 exams:
 - uid: exam.ai-100
 resources:
-- title: Lernpfad zur Zertifizirung
-  description: 'Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Azure AI Engineer Associate zu werden.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWusKi
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
 - title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
