--- a/learn-certs-pr/power-platform-fundamentals.yml
+++ b/learn-certs-pr/power-platform-fundamentals.yml
@@ -1,7 +1,7 @@
-### YamlMime:Certification
-title: 'Microsoft Certified: Power Platform Fundamentals'
+﻿### YamlMime:Certification
+title: Microsoft Certified Power Platform Fundamentals
 metadata:
-  title: 'Microsoft Certified: Power Platform Fundamentals'
+  title: Microsoft Certified Power Platform Fundamentals
   description: Zeigen Sie, dass Sie die Kernfunktionen der Power Platform verstehen - von den Funktionen für den Geschäftswert und die Kernprodukte bis hin zur Erstellung einer grundlegenden Power Apps Canvas-App, der Verbindung von Datenquellen, der Automatisierung mit Microsoft Flow und der Erstellung eines Power BI-Dashboards.
 uid: certification.power-platform-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
@@ -31,10 +31,10 @@ exams:
 - uid: exam.pl-900
 resources:
 - title: Lernpfad zur Zertifizierung
-  description: 'Entdecken Sie die Schulungsressourcen, um von Microsoft in Power Platform Fundamentals.'
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Power Platform Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4oeDu
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
