--- a/learn-certs-pr/azure-data-engineer.yml
+++ b/learn-certs-pr/azure-data-engineer.yml
@@ -1,19 +1,21 @@
-### YamlMime:Certification
+﻿### YamlMime:Certification
 title: 'Microsoft Certified: Azure Data Engineer Associate'
 metadata:
   title: 'Microsoft Certified: Azure Data Engineer Associate'
-  description: Azure Data Engineers entwerfen und implementieren das Management, die Überwachung, die Sicherheit und den Datenschutz von Daten unter Verwendung des gesamten Stapels von Azure Data Services, um die Geschäftsanforderungen zu erfülle.
+  description: 'Azure Data Engineers entwerfen und implementieren das Management, die Überwachung, die Sicherheit und den Datenschutz von Daten unter Verwendung des gesamten Stapels von Azure Data Services, um die Geschäftsanforderungen zu erfülle.'
 uid: certification.azure-data-engineer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: Azure Data Engineers entwerfen und implementieren das Management, die Überwachung, die Sicherheit und den Datenschutz von Daten unter Verwendung des gesamten Stapels von Azure Data Services, um die Geschäftsanforderungen zu erfülle.
-subTitle: Azure Data Engineers entwerfen und implementieren das Management, die Überwachung, die Sicherheit und den Datenschutz von Daten unter Verwendung des gesamten Stapels von Azure Data Services, um die Geschäftsanforderungen zu erfülle.
+summary: |-
+  Azure Data Engineers entwerfen und implementieren das Management, die Überwachung, die Sicherheit und den Datenschutz von Daten unter Verwendung des gesamten Stapels von Azure Data Services, um die Geschäftsanforderungen zu erfülle
+subTitle: Azure Data Engineers entwerfen und implementieren das Management, die Überwachung, die Sicherheit und den Datenschutz von Daten unter Verwendung des gesamten Stapels von Azure Data Services, um die Geschäftsanforderungen zu erfülle
 levels:
 - intermediate
 skills:
+- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - Implementierung von Datenspeicherlösungen
 - Verwaltung und Entwicklung der Datenverarbeitung
 - Überwachen und Optimieren von Datenlösungen
-- Entwickeln von Azure-Datenspeicherlösungen
+- Entwickeln von Azure-Datenspeicherlösungen.
 - Entwerfen von Datenverarbeitungslösungen
 - Entwickeln für Datensicherheit und Compliance
 roles:
@@ -42,27 +44,22 @@ paths:
 - uid: learn.data-ai.data-processing-with-azure-adls
 - uid: learn.data-ai.implement-data-streaming-with-asa
 - uid: learn.data-ai.implement-sql-data-warehouse
-- uid: learn.modern-data-warehouse
-- uid: learn.data-science
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwUG
 exams:
 - uid: exam.dp-200
 - uid: exam.dp-201
 resources:
-- title: Lernpfad zur Zertifizirung
-  description: 'Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Azure Data Engineer Associate zu werden.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWuAzL
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
 - title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
