--- a/learn-certs-pr/exams/62-193.yml
+++ b/learn-certs-pr/exams/62-193.yml
@@ -1,22 +1,21 @@
-### YamlMime:Examination
+﻿### YamlMime:Examination
 title: Technology Literacy for Educators
 metadata:
-  title: 'Prüfung 62-193: Technology Literacy for Educators'
-  description: 'Prüfung 62-193: Technology Literacy for Educators'
+  title: 'Exam 62-193: Technology Literacy for Educators'
+  description: 'Exam 62-193: Technology Literacy for Educators'
 uid: exam.62-193
 displayName: 62-193
 summary: |-
   Zu den Kandidaten für diese Prüfung gehören Personen, die sich darauf vorbereiten, Klassenlehrer zu werden, aktuelle Ausbilder, Dozenten in der Lehrerausbildung oder an Vordiplomschulen, Bildungsadministratoren oder andere Fachkräfte, die eine Validierung der Kompetenz anstreben.
 
-
-  Der MCE&#58; Der Zertifizierungstest "Technology Literacy for Educators" ist eine Prüfung auf mittlerer Ebene, die als gültiges und zuverlässiges Maß für die Kompetenzen im Rahmen des 21st Century Learning Design (21CLD) dienen soll.
+  Der Zertifizierungstest MCE&#58; Technology Literacy for Educators ist eine Prüfung auf mittlerer Ebene, die als gültiges und zuverlässiges Maß für die Kompetenzen im Rahmen des 21st Century Learning Design (21CLD) dienen soll.
 subTitle: Zu den Kandidaten für diese Prüfung gehören Personen, die sich darauf vorbereiten, Klassenlehrer zu werden, aktuelle Ausbilder, Dozenten in der Lehrerausbildung oder an Vordiplomschulen, Bildungsadministratoren oder andere Fachkräfte, die eine Validierung der Kompetenz anstreben.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 providers:
   - providerType: pearson-vue
-    examUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=62-193&examname=Technology%20Literacy%20for%20Educators&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fde-de%2Flearn%2Fcertifications%2Fexams%2F62-193
+    examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=62-193&examname=Technology%20Literacy%20for%20Educators&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2F62-193
   - providerType: certiport
-    examUrl: https://www.certiport.com/locator
+    examUrl: http://www.certiport.com/locator
 locales:
 - en
 - de
@@ -27,16 +26,17 @@ locales:
 - ru
 - pl
 - ja
-levels:
+- tr
+levels: 
 - beginner
 skills:
 - Erleichtern Sie die Zusammenarbeit mit Studenten
 - Erleichtern Sie die fachkundige Kommunikation
 - Wissensaufbau erleichtern
-- Erleichterung der Selbstregulierung
+- Erleichtern Sie die Selbstregulierung
 - Erleichterung der Problemlösung und Innovation in der realen Welt
 - Erleichterung der Nutzung von Informations- und Kommunikationsinstrumenten (ICT) durch die Studierenden
-- Nutzen Sie ICT, um ein effektiver Ausbilder zu sein
+- Nutzen Sie ICT, um ein effektiver Ausbilder zu sein.
 roles:
 - developer
 products:
@@ -50,7 +50,7 @@ resources:
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
   description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
