--- a/learn-certs-pr/exams/az-103.yml
+++ b/learn-certs-pr/exams/az-103.yml
@@ -1,4 +1,4 @@
-### YamlMime:Examination
+﻿### YamlMime:Examination
 title: Microsoft Azure Administrator
 metadata:
   title: 'Exam AZ-103: Microsoft Azure Administrator'
@@ -6,7 +6,7 @@ metadata:
 uid: exam.az-103
 displayName: AZ-103
 summary: |-
-  <div style="color&#58; red; font-weight&#58; bold;">EINE NEUE VERSION DIESES EXAMENS, AZ-104, WIRD AM ODER UM DEN 31. MÄRZ 2020 VERFÜGBAR SEIN. Sie können dieses Examen ablegen, bis es am oder um den 30. Juni 2020 eingestellt wird. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
+  <div style='color&#58; red; font-weight&#58; bold;'>EINE NEUE VERSION DIESES EXAMENS, AZ-104, WIRD AM ODER UM DEN Dienstag, 31. März 2020 VERFÜGBAR SEIN. Sie können dieses Examen ablegen, bis es am oder um den 30. Juni 2020 eingestellt wird. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
   
   Ab dem 1. Mai 2019 müssen Sie nur noch die Exam AZ-103 ablegen, um diese Zertifizierung zu erhalten. Diese neue Prüfung kombiniert die Kompetenzen von AZ-100 und AZ-101 (die am 1. Mai 2019 aus dem Programm genommen wurden), während der Großteil der neuen Prüfung aus AZ-100 stammt.
 
@@ -17,7 +17,7 @@ subTitle: 'Ab dem 1. Mai 2019 müssen Sie nur noch die Exam AZ-103 ablegen, um d
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwUR
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-103?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-103&examname=Exam%20AZ-103:%20Microsoft%20Azure%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-103
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-103&examname=Exam%20AZ-103:%20Microsoft%20Azure%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-103
 locales:
 - en
 - ja
@@ -60,11 +60,8 @@ relatedCertifications:
 - related:
     uid: certification.azure-administrator
 resources:
-- title: Lernpfad zur Zertifizierung
-  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Azure Administrator Associate.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtY7Z
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
