--- a/learn-certs-pr/exams/az-104.yml
+++ b/learn-certs-pr/exams/az-104.yml
@@ -1,4 +1,4 @@
-### YamlMime:Examination
+﻿### YamlMime:Examination
 title: Microsoft Azure Administrator (beta)
 metadata:
   title: 'Exam AZ-104: Microsoft Azure Administrator (beta)'
@@ -11,10 +11,10 @@ summary: |-
   Kandidaten sollten mindestens sechs Monate Erfahrung in der Verwaltung von Azure haben. Kandidaten sollten über ein umfassendes Verständnis der wichtigsten Azure-Services, Azure-Workloads, Security und Governance verfügen. Kandidaten für dieses Examen sollten Erfahrung in der Verwendung von PowerShell, dem Command Line Interface, Azure Portal und ARM-Templates haben.
   
   <div style='color&#58; red; font-weight&#58; bold;'><br/>Hinweis&#58; dieses examens wird am oder um den 31. märz 2020 verfügbar sein.</div>
-subTitle: 'Dieses Examen misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Verwalten von Azure-Identitäten und -Governance; Speicher implementieren und verwalten; Bereitstellen und Verwalten von Azure-Rechenressourcen; Konfigurieren und Verwalten von virtuellen Netzwerken und Azure-Ressourcen überwachen und sichern. '
+subTitle: 'Dieses Examen misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Verwalten von Azure-Identitäten und -Governance; Speicher implementieren und verwalten; Bereitstellen und Verwalten von Azure-Rechenressourcen; Konfigurieren und Verwalten von virtuellen Netzwerken und Azure-Ressourcen überwachen und sichern.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4pCWy
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-104&examname=Exam%20AZ-104:%20Microsoft%20Azure%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-104
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-104&examname=Exam%20AZ-104:%20Microsoft%20Azure%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-104
 locales:
 - en
 levels:
@@ -22,7 +22,7 @@ levels:
 skills:
 - Verwalten von Azure-Identitäten und -Governance (15-20%) 
 - Implementieren und Verwalten von Speicherplatz (10-15%)
-- Bereitstellen und Verwalten von Azure-Rechenressourcen (25 bis 30%) 
+- Bereitstellen und Verwalten von Azure-Rechenressourcen (25-30%) 
 - Virtuelle Netzwerke konfigurieren und verwalten (30-35%) 
 - Überwachen und Sichern von Azure-Ressourcen (10-15%)
 roles:
@@ -45,11 +45,8 @@ relatedCertifications:
 - related:
     uid: none
 resources:
-- title: Lernpfad zur Zertifizierung
-  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Azure Administrator Associate.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtY7Z
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
