--- a/learn-certs-pr/exams/dp-200.yml
+++ b/learn-certs-pr/exams/dp-200.yml
@@ -1,4 +1,4 @@
-### YamlMime:Examination
+﻿### YamlMime:Examination
 title: Implementing an Azure Data Solution
 metadata:
   title: 'Exam DP-200: Implementing an Azure Data Solution'
@@ -12,12 +12,12 @@ summary: |-
 
   Die Datentechniker von Azure sind für datenbezogene Aufgaben verantwortlich, wie die Bereitstellung von Datenspeicherdiensten, die Aufnahme von Streaming- und Batchdaten, die Transformation von Daten, die Implementierung von Sicherheitsanforderungen, die Implementierung von Datenhaltungsrichtlinien, die Identifizierung von Leistungsengpässen und den Zugriff auf externe Datenquellen.
 
-  Die Kandidaten für diese Prüfung müssen in der Lage sein, Datenlösungen zu implementieren, die die folgenden Azure Services verwenden: Azure Cosmos DB, Azure SQL Database, Azure Synapse Analytics (ehemals Azure SQL DW), Azure Data Lake Storage, Azure Data Factory, Azure Stream Analytics, Azure Databricks und Azure Blob Storage.
+  Die Kandidaten für diese Prüfung müssen in der Lage sein, Datenlösungen zu implementieren, die die folgenden Azure Services verwenden&#58; Azure Cosmos DB, Azure SQL Database, Azure Synapse Analytics (ehemals Azure SQL DW), Azure Data Lake Storage, Azure Data Factory, Azure Stream Analytics, Azure Databricks und Azure Blob Storage.
 subTitle: 'Diese Prüfung misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Datenspeicherlösungen implementieren, Datenverarbeitung verwalten und entwickeln sowie Datenlösungen überwachen und optimieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzx2
 practiceTestUrl: https://us.mindhub.com/p/MU-DP-200?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=DP-200&examname=Exam%20DP-200:%20Implementing%20an%20Azure%20Data%20Solution&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-200
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=DP-200&examname=Exam%20DP-200:%20Implementing%20an%20Azure%20Data%20Solution&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-200
 locales:
 - en
 - ja
@@ -57,17 +57,12 @@ paths:
 - uid: learn.data-ai.data-processing-with-azure-adls
 - uid: learn.data-ai.implement-data-streaming-with-asa
 - uid: learn.data-ai.implement-sql-data-warehouse
-- uid: learn.modern-data-warehouse
-- uid: learn.data-science
 relatedCertifications:
 - related:
-   uid: certification.azure-data-engineer
+    uid: certification.azure-data-engineer
 resources:
-- title: Lernpfad zur Zertifizierung
-  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Azure Data Engineer Associate.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWuAzL
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
