--- a/learn-certs-pr/exams/mb-500.yml
+++ b/learn-certs-pr/exams/mb-500.yml
@@ -1,8 +1,8 @@
-### YamlMime:Examination
-title: 'Microsoft Dynamics 365: Finance and Operations Apps Developer (beta)'
+﻿### YamlMime:Examination
+title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate'
 metadata:
-  title: 'MB-500: Microsoft Dynamics 365: Finance and Operations Apps Developer (beta)'
-  description: 'MB-500: Microsoft Dynamics 365: Finance and Operations Apps Developer (beta)'
+  title: 'MB-500: Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate'
+  description: 'MB-500: Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate'
 uid: exam.mb-500
 displayName: MB-500
 summary: |-
@@ -14,15 +14,13 @@ summary: |-
   
   Die Kandidaten sollen über fundierte Kenntnisse und Erfahrungen im Umgang mit dem zugrunde liegenden Framework, mit den Datenstrukturen und den mit den Finanz- und Betriebslösungen verbundenen Objekten verfügen.
   
-  Die Kandidaten sollten Erfahrung mit folgenden Produkten haben: Visual Studio, Azure DevOps, LCS-Tools und SQL Server Management Studio.
+  Die Kandidaten sollten Erfahrung mit folgenden Produkten haben&#58; Visual Studio, Azure DevOps, LCS-Tools und SQL Server Management Studio.
   
   Die Kandidaten sollen Erfahrung in der Entwicklung von Code mit objektorientierten Programmiersprachen, in der Analyse und Manipulation von Daten mit Transact-SQL-Code, sowie in der Erstellung und Ausführung von Windows PowerShell-Befehlen und -Skripten haben.
-  
-  <div style='color&#58; red;'><br/>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. Um mehr zu erfahren <a href="/learn/certifications/certification-exams#participating-in-beta-exams">about the value and importance of beta exams</a>.</div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Planen der Architektur und Design der Lösung, Anwenden von Entwicklerwerkzeugen, Design und Entwickeln von AOT-Elementen, Entwickeln und Testen von Code, Implementieren der Berichterstellung, Integrieren und Verwalten von Datenlösungen, Implementieren von Sicherheit und Optimieren der Leistung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE42pBB
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-500&examname=Exam%20MB-500:%20Microsoft%20Dynamics%20365%20Finance%20and%20Operations%20Apps%20Developer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-500
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MB-500&examname=Exam%20MB-500:%20Microsoft%20Dynamics%20365%20Finance%20and%20Operations%20Apps%20Developer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-500
 locales:
 - en
 levels:
@@ -32,7 +30,7 @@ skills:
 - Planen der Architektur und Lösungsentwicklung (10-15%)
 - Entwickler-Tools anwenden (10-15%)
 - Design und Entwicklung von AOT-Elementen (20-25%)
-- Entwickeln und Testen des Codes (10 -15%)
+- Entwickeln und Testen des Codes (10-15%)
 - Berichterstellung einführen (10-15%)
 - Integration und Verwaltung von Datenlösungen (10-15%)
 - Implementieren der Sicherheit und Leistungsoptimierung (10-15%)
@@ -59,7 +57,7 @@ resources:
   description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4o4j5
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
