--- a/learn-certs-pr/exams/mb-901.yml
+++ b/learn-certs-pr/exams/mb-901.yml
@@ -1,8 +1,8 @@
-### YamlMime:Examination
-title: Microsoft Dynamics 365 Fundamentals (beta)
+﻿### YamlMime:Examination
+title: Microsoft Dynamics 365 Fundamentals
 metadata:
-  title: 'Exam MB-901: Microsoft Dynamics 365 Fundamentals (beta)'
-  description: 'Exam MB-901: Microsoft Dynamics 365 Fundamentals (beta)'
+  title: 'Exam MB-901: Microsoft Dynamics 365 Fundamentals'
+  description: 'Exam MB-901: Microsoft Dynamics 365 Fundamentals'
 uid: exam.mb-901
 displayName: MB-901
 summary: |-
@@ -11,14 +11,16 @@ summary: |-
   Die Kandidaten sollten über ein funktionales Verständnis der Dynamics 365-Funktionen und des Microsoft Cloud Computing verfügen.
 
   Die Kandidaten dieser Prüfung sollten über allgemeine Kenntnisse oder einschlägige Berufserfahrung in einer Umgebung der Informationstechnologie (IT) verfügen. Die Kandidaten sollten auch über ein grundlegendes Verständnis von Geschäftsszenarien und Erfahrungen bei der Bewältigung von Geschäfts-, Rechts- und Sicherheitsanforderungen für IT-Projekte verfügen.
-  
-  <div style='color&#58; red;'><br/>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. Um mehr zu erfahren <a href="/learn/certifications/certification-exams#participating-in-beta-exams">about the value and importance of beta exams</a>.</div>
 subTitle: Dieses Examen misst Ihre Fähigkeit, Microsoft Dynamics 365 zu verstehen. künstliche Intelligenz (KI); gemischte Realität (MR); die Energieplattform; Cloud-Konzepte; Cloud-Sicherheit; rollenbasierte Sicherheit in Dynamics 365; Gemeinsamer Datendienst; Datenverwaltungsrahmen; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4n1DO
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-901&examname=Exam%20MB-901:%20Microsoft%20Dynamics%20365%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-901
 locales:
 - en
+providers:
+  - providerType: pearson-vue
+    examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MB-901&examname=Exam%20MB-901:%20Microsoft%20Dynamics%20365%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-901
+  - providerType: certiport
+    examUrl: http://www.certiport.com/locator
 levels:
 - beginner
 skills:
@@ -42,7 +44,7 @@ resources:
   description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Dynamics 365 Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4pHPx
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
