--- a/learn-certs-pr/exams/ms-600.yml
+++ b/learn-certs-pr/exams/ms-600.yml
@@ -1,8 +1,8 @@
-### YamlMime:Examination
-title: 'Building Applications and Solutions with Microsoft 365 Core Services (beta)'
+﻿### YamlMime:Examination
+title: 'Building Applications and Solutions with Microsoft 365 Core Services'
 metadata:
-  title: 'Exam MS-600: Building Applications and Solutions with Microsoft 365 Core Services (beta)'
-  description: 'Exam MS-600: Building Applications and Solutions with Microsoft 365 Core Services (beta)'
+  title: 'Exam MS-600: Building Applications and Solutions with Microsoft 365 Core Services'
+  description: 'Exam MS-600: Building Applications and Solutions with Microsoft 365 Core Services'
 uid: exam.ms-600
 displayName: MS-600
 summary: |-
@@ -11,12 +11,10 @@ summary: |-
   Die Kandidaten für diese Prüfung verfügen über Kenntnisse in Microsoft Identity und Microsoft Graph. Sie verfügen über allgemeine Kenntnisse über UI-Elemente (Adaptive Cards und UI Fabric), Integrationspunkte (einschließlich Microsoft Teams, Office Add-Ins, SharePoint Framework, Actionable Messages) und die Festlegung von Workload-Plattform-Zielen.
 
   Die Kandidaten sollten über Erfahrungen in der Entwicklung von Lösungen auf Microsoft Teams, Office Add-Ins oder SharePoint Framework in allen Phasen der Softwareentwicklung verfügen. Sie sollten über ein grundlegendes Verständnis von REST-APIs, JSON, OAuth2, OData, OpenID Connect, Microsoft identities (Microsoft-Identitäten) (einschließlich Azure AD- und Microsoft-accounts (Konten)), Azure AD B2C und Berechtigungs- und Genehmigungskonzepten verfügen.
-  
-  <div style='color&#58; red;'><br/>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. Um mehr zu erfahren <a href="/learn/certifications/certification-exams#participating-in-beta-exams">about the value and importance of beta exams</a>.</div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Microsoft-Identity implementieren, Anwendungen mit Microsoft Graph erstellen, SharePoint erweitern und anpassen, Teams erweitern und Office erweitern.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43CZn
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-600&examname=Exam%20MS-600:%20Building%20Applications%20and%20Solutions%20with%20Microsoft%20365%20Core%20Services&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-600
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MS-600&examname=Exam%20MS-600:%20Building%20Applications%20and%20Solutions%20with%20Microsoft%20365%20Core%20Services&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-600
 locales:
 - en
 levels:
@@ -32,6 +30,8 @@ roles:
 - developer
 products:
 - m365
+courses:
+- uid: course.ms-600t00
 paths:
 - uid: learn-m365-pr.extend-office-fundamentals
 relatedCertifications:
@@ -42,7 +42,7 @@ resources:
   description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Developer Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4561r
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
