--- a/learn-certs-pr/exams/pl-900.yml
+++ b/learn-certs-pr/exams/pl-900.yml
@@ -1,4 +1,4 @@
-### YamlMime:Examination
+﻿### YamlMime:Examination
 title: 'Microsoft Power Platform Fundamentals'
 metadata:
   title: 'Exam PL-900: Microsoft Power Platform Fundamentals'
@@ -8,7 +8,7 @@ displayName: PL-900
 summary: |-
   Kandidaten für diese Prüfung sind Anwender, die eine Produktivitätssteigerung durch Automatisierung von Geschäftsprozessen, durch Datenanalyse zum Erlangen geschäftlicher Erkenntnisse und durch effektiveres Handeln durch Erstellen einfacher App-Funktionen anstreben.
   
-  Diese Prüfung umfasst die folgende: Beschreiben Sie die Power-Platform-Komponenten: Power Apps, Power BI, Microsoft Flow, Common Data Service (CDS), Konnektoren und AI Builder. Beschreiben Sie cloudübergreifende Szenarien, die über Microsoft 365, Dynamics 365, Microsoft Azure und Drittanbieterdienste repräsentiert werden. Identifizieren Sie die Vorteile und Fähigkeiten von Power Platform. Identifizieren Sie die grundlegende Funktionalität und den Geschäftswert der Power-Platform-Komponenten. Implementieren Sie einfache Lösungen mit Microsoft Flow, Power BI und AI Builder und erstellen Sie eine Basis-App in einer No-Code Umgebung.
+  Diese Prüfung umfasst die folgende&#58; Beschreiben Sie die Power-Platform-Komponenten&#58; Power Apps, Power BI, Microsoft Flow, Common Data Service (CDS), Konnektoren und AI Builder. Beschreiben Sie cloudübergreifende Szenarien, die über Microsoft 365, Dynamics 365, Microsoft Azure und Drittanbieterdienste repräsentiert werden. Identifizieren Sie die Vorteile und Fähigkeiten von Power Platform. Identifizieren Sie die grundlegende Funktionalität und den Geschäftswert der Power-Platform-Komponenten. Implementieren Sie einfache Lösungen mit Microsoft Flow, Power BI und AI Builder und erstellen Sie eine Basis-App in einer No-Code Umgebung.
 subTitle: Diese Prüfung misst Ihre Fähigkeit, den Geschäftswert und die Kernkomponenten von Power Platform zu verstehen und einzuschätzen und Ihre Fähigkeit, den Geschäftswert von Power BI und Microsoft Flow zu demonstrieren.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Nnn
@@ -16,7 +16,7 @@ locales:
 - en
 providers:
   - providerType: pearson-vue
-    examUrl: 'https://examregistration.microsoft.com/?locale=de-de&examcode=PL-900&examname=Exam%20PL-900:%20Microsoft%20Power%20Platform%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-900'
+    examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=PL-900&examname=Exam%20PL-900:%20Microsoft%20Power%20Platform%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-900
   - providerType: certiport
     examUrl: http://www.certiport.com/locator
 levels:
@@ -40,10 +40,10 @@ relatedCertifications:
     uid: certification.power-platform-fundamentals
 resources:
 - title: Lernpfad zur Zertifizierung
-  description: 'Entdecken Sie die Schulungsressourcen, um von Microsoft in Power Platform Fundamentals.'
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Power Platform Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4oeDu
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
